associate_public_subnets_route_table.tf
resource "aws_route_table_association" "associate_public_subnet1_route_table"{
    subnet_id = "${aws_subnet.public_subnet1.id}"
    route_table_id = "${aws_route_table.public_route_table.id}"
}

resource "aws_route_table_association" "associate_public_subnet2_route_table"{
    subnet_id = "${aws_subnet.public_subnet2.id}"
    route_table_id = "${aws_route_table.public_route_table.id}"
}
