vpc.tf
resource "aws_vpc" "terraform_iti_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "terraform_iti_vpc"
  }
}
